--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .logo-contenedor{
-    width: 100%;
+    width: 80%;
     height: 1%;
     display: flex;
     align-items: center;
@@ -18,31 +18,142 @@
 }
 
 .logo-titulo{
-    font-size: 70px;
+    font-size: 2.5em;
     font-weight: 300;
     color: #efffff;
     text-align: center;
 }
 
 .logo{
-    width: 63px;
+    width: 7%;
     height: auto;
     margin-left: 40px;
 }
 
 .contenedor-calculadora{
     width: 50%;
-    height: 75%;
+    height: 70%;
+    max-height: 900px;
     padding: 14px;
     background-color: #145c7a;
     border-radius: 20px;
     border: 5px solid #efffff;
     font-family: Orbitron, sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;  
 }
 
 .fila {
-    margin:10px;
+    height: 15%;
+    margin: 1%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
+@media screen and (max-width: 768px){
+    .App{
+        height: 100vh;
+        background-color: #1b1b32;
+        font-family: Orbitron, sans-serif;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+    
+    .logo-contenedor{
+        width: 100%;
+        height: 1%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .logo-titulo{
+        font-size: 40px;
+        font-weight: 300;
+        color: #efffff;
+        text-align: center;
+        margin: 3%;
+    }
+
+    .logo{
+        display: none;
+    }
+
+    .contenedor-calculadora{
+        width: 70%;
+        max-height: 550px;
+        padding: 2%;
+        height: 75%;
+        background-color: #145c7a;
+        border-radius: 20px;
+        border: 5px solid #efffff;
+        font-family: Orbitron, sans-serif;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;        
+    }
+
+    .fila {
+        height:15%;
+        margin:1%;
+    }
+}
+
+@media screen and (max-width: 360px){
+    .App{
+        height: 100vh;
+        background-color: #1b1b32;
+        font-family: Orbitron, sans-serif;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+    
+    .logo-contenedor{
+        width: 100%;
+        height: 1%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        margin-top: 30px;
+    }
+
+    .logo-titulo{
+        font-size: 35px;
+        font-weight: 300;
+        color: #efffff;
+        text-align: center;
+        margin: 3%;
+    }
+
+    .logo{
+        display: none;
+    }
+
+    .contenedor-calculadora{
+        width: 60%;
+        padding: 2%;
+        height: 55%;
+        max-height: 400px;
+        min-height: 300px;
+        background-color: #145c7a;
+        border-radius: 20px;
+        border: 5px solid #efffff;
+        font-family: Orbitron, sans-serif;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;        
+    }
+
+    .fila {
+        height:15%;
+        margin:2%;
+    }
+}
+
