--- a/src/styles/Pantalla.css
+++ b/src/styles/Pantalla.css
@@ -1,9 +1,10 @@
 .contenedor-input{
     width: 100%;
-    height: 13%;
+    height:20%;
+    max-height: 110px;
     border-radius: 50px;
-    margin-bottom: 25px;
-    margin-top: 15px;
+    margin-bottom: 2%;
+    margin-top: 2%;
     display: inline-flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -20,24 +21,100 @@
 }
 
 .primerTermino{
-    width: 85%;
-    height:80%;
-    font-size: 20px;
+    width: 88%;
+    font-size: 25px;
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
     text-align: center;
     overflow: hidden;
+    margin-top: 1%;
+    margin-right: 1%;
 }
 
 .input{
     width: 90%;
-    height: 90%;
-    font-size:40px;
-    padding-bottom: 9px;
+    font-size:45px;
     padding-right: 5px;
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
     overflow: hidden;
+    margin-right: 1%;
+    margin-bottom: 1%;
+}
+
+@media screen and (max-width: 768px){
+    .contenedor-input{
+        width: 95%;
+        height:15%;
+        border-radius: 50px;
+        margin-top: 0px;
+        margin-bottom:5%;
+        justify-content: center;
+        padding: 1%;
+        margin: 2%;
+    }
+    
+    .oculto {
+        display:none;
+    }
+    
+    .primerTermino{
+        width: 85%;
+        font-size: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        text-align:start;
+        margin-top: 1%;
+        margin-right: 1%;
+        padding: 0%;
+    }
+    
+    .input{
+        font-size:40px;
+        align-items: center;
+        justify-content: flex-end;
+        margin-bottom: 1%;
+        margin-right: 3%;
+        padding: 0px;
+    }
+}
+
+@media screen and (max-width: 360px){
+    .contenedor-input{
+        width: 95%;
+        height:15%;
+        border-radius: 50px;
+        margin-top: 0px;
+        margin-bottom:5%;
+        justify-content: space-between;
+        padding: 1%;
+    }
+    
+    .oculto {
+        display:none;
+    }
+    
+    .primerTermino{
+        width: 85%;
+        font-size: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        text-align:start;
+        margin-top: 3%;
+        margin-right: 3%;
+        padding: 0%;
+    }
+    
+    .input{
+        font-size:30px;
+        align-items: center;
+        justify-content: flex-end;
+        margin-bottom: 3%;
+        margin-right: 5%;
+        padding: 0px;
+    }
 }
